css/main.css
body {
    margin:0px;
    padding:0px;
}

.movable {
    position:absolute;
    bottom:500px;
    left:30px;
}

.colliderContainer {
    overflow:hidden;
    position:relative;
}

.solidCollider, .solidColliderMoving {
   position:relative;
   pointer-events:none;
}

.collider {
   position:absolute;
}

.koboldImg {
    position:absolute;
    height:100px;
    width:100px;
    top:-15px;
    z-index:10;
    background-image:url("../img/kobold.png");
}

.koboldImg.left {
    left:-15px;
    transform:scaleX(-1);
    -webkit-transform:scaleX(-1);
}

.koboldImg.right {
    left:-33px;
}

.koboldImg.idle {
    animation: idle 0.5s steps(2) infinite;
    -webkit-animation: idle 0.5s steps(2) infinite;
}
@keyframes idle {
   from { background-position:    0px 0px; }
     to { background-position: -200px 0px; }
}
@-webkit-keyframes idle {
   from { background-position:    0px 0px; }
     to { background-position: -200px 0px; }
}

.koboldImg.idle.rand.jawn {
    animation: jawn 3s steps(10) 1;
    -webkit-animation: jawn 3s steps(10) 1;
}
@keyframes jawn {
   from { background-position:     0px -202px; }
     to { background-position: -1000px -202px; }
}
@-webkit-keyframes jawn {
   from { background-position:     0px -202px; }
     to { background-position: -1000px -202px; }
}

.koboldImg.idle.rand.wink {
    animation: wink 0.5s steps(4) 2;
    -webkit-animation: wink 0.5s steps(4) 2;
}
@keyframes wink {
   from { background-position:    0px -606px; }
     to { background-position: -400px -606px; }
}
@-webkit-keyframes wink {
   from { background-position:    0px -606px; }
     to { background-position: -400px -606px; }
}

.koboldImg.idle.rand.wave {
    animation: wave 1s steps(8) 1;
    -webkit-animation: wave 1s steps(8) 1;
}
@keyframes wave {
   from { background-position:    0px -505px; }
     to { background-position: -800px -505px; }
}
@-webkit-keyframes wave {
   from { background-position:    0px -505px; }
     to { background-position: -800px -505px; }
}

.koboldImg.walk {
    animation: walk 0.4s steps(9) infinite;
    -webkit-animation: walk 0.4s steps(9) infinite;
}
@keyframes walk {
   from { background-position:    0px -404px; }
     to { background-position: -900px -404px; }
}
@-webkit-keyframes walk {
   from { background-position:    0px -404px; }
     to { background-position: -900px -404px; }
}

.koboldImg.run {
    animation: run 0.6s steps(6) infinite;
    -webkit-animation: run 0.6s steps(6) infinite;
}
@keyframes run {
   from { background-position:    0px -303px; }
     to { background-position: -600px -303px; }
}
@-webkit-keyframes run {
   from { background-position:    0px -303px; }
     to { background-position: -600px -303px; }
}

.koboldImg.idle.crouch {
    animation: idleCrouch 0.5s steps(2) infinite;
    -webkit-animation: idleCrouch 0.5s steps(2) infinite;
}
@keyframes idleCrouch {
   from { background-position:    0px -101px; }
     to { background-position: -200px -101px; }
}
@-webkit-keyframes idleCrouch {
   from { background-position:    0px -101px; }
     to { background-position: -200px -101px; }
}
.koboldImg.walk.crouch {
    animation: crouch 0.4s steps(8) infinite;
    -webkit-animation: crouch 0.4s steps(8) infinite;
}
@keyframes crouch {
   from { background-position:    0px -101px; }
     to { background-position: -800px -101px; }
}
@-webkit-keyframes crouch {
   from { background-position:    0px -101px; }
     to { background-position: -800px -101px; }
}
.koboldImg.run.crouch {
    animation: runCrouch 0.25s steps(8) infinite;
    -webkit-animation: runCrouch 0.25s steps(8) infinite;
}
@keyframes runCrouch {
   from { background-position:    0px -101px; }
     to { background-position: -800px -101px; }
}
@-webkit-keyframes runCrouch {
   from { background-position:    0px -101px; }
     to { background-position: -800px -101px; }
}

.koboldImg.appear {
    animation: appear 1s steps(6) 1;
    -webkit-animation: appear 1s steps(6) 1;
}
@keyframes appear {
   from { background-position:    0px -707px; }
     to { background-position: -600px -707px; }
}
@-webkit-keyframes appear {
   from { background-position:    0px -707px; }
     to { background-position: -600px -707px; }
}

.koboldImg.vanish {
    animation: vanish 1s steps(9) 1;
    -webkit-animation: vanish 1s steps(9) 1;
}
@keyframes vanish {
   from { background-position:    0px -808px; }
     to { background-position: -900px -808px; }
}
@-webkit-keyframes vanish {
   from { background-position:    0px -808px; }
     to { background-position: -900px -808px; }
}

.koboldImg.cry {
    animation: cry 0.3s steps(2) 3;
    -webkit-animation: cry 0.3s steps(2) 3;
}
@keyframes cry {
   from { background-position:    0px -909px; }
     to { background-position: -200px -909px; }
}
@-webkit-keyframes cry {
   from { background-position:    0px -909px; }
     to { background-position: -200px -909px; }
}
/*
.koboldImg.jump {
    animation: jump 0.5s steps(2) infinite;
    -webkit-animation: jump 0.5s steps(2) infinte;
}
@keyframes jump {
   from { background-position:    0px 0px; }
     to { background-position: -200px 0px; }
}
@-webkit-keyframes jump {
   from { background-position:    0px 0px; }
     to { background-position: -200px 0px; }
}
.koboldImg.crouch.jump {
    animation: crouchJump 0.5s steps(2) infinite;
    -webkit-animation: crouchJump 0.5s steps(2) infinte;
}
@keyframes crouchJump {
   from { background-position:    0px -101px; }
     to { background-position: -200px -101px; }
}
@-webkit-keyframes crouchJump {
   from { background-position:    0px -101px; }
     to { background-position: -200px -101px; }
}
*/

